--- a/blog/templates/blog/category.html
+++ b/blog/templates/blog/category.html
@@ -21,25 +21,25 @@
     <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col-md-10 col-lg-8 col-xl-7">
             <!-- Post preview-->
-            {% for article in articles %}
-                <div class="post-preview">
-                    <a href="{% url 'blog:detail' article.slug %}">
-                        <h2 class="post-title">{{article.title}}</h2>
-                        <h3 class="post-subtitle">{{article.description|truncatewords:30}}</h3>
-                    </a>
-                    <p class="post-meta">
-                        نوشته شده توسط
-                        <a href="#!">هانی سیدی</a>
-                        {{article.jpublish}}
-                    </p>
-                    <div>
-                        {% for cat in article.category_publised.all %}
-                            <a href="{% url 'blog:category' cat.slug %}">#{{cat.title}}</a>
-                        {% endfor %}
-                    </div>
+            {% for article in category.articles.published %}
+            <div class="post-preview">
+                <a href="{% url 'blog:detail' article.slug %}">
+                    <h2 class="post-title">{{article.title}}</h2>
+                    <h3 class="post-subtitle">{{article.description|truncatewords:30}}</h3>
+                </a>
+                <p class="post-meta">
+                    نوشته شده توسط
+                    <a href="#!">هانی سیدی</a>
+                    {{article.jpublish}}
+                </p>
+                <div>
+                    {% for cat in article.category_publised.all %}
+                    <a href="{% url 'blog:category' cat.slug %}">#{{cat.title}}</a>
+                    {% endfor %}
                 </div>
-                <!-- Divider-->
-                <hr class="my-4" />
+            </div>
+            <!-- Divider-->
+            <hr class="my-4" />
             {% endfor %}
             <!-- Pager-->
             <div class="d-flex justify-content-end mb-4 pager-botton">
