--- a/blog/static/blog/css/rtl.css
+++ b/blog/static/blog/css/rtl.css
@@ -26,3 +26,15 @@ a,h1,h2,h3,h4,h5,h6,
 .post-meta {
     text-align: left;
 }
+
+header.masthead .site-heading h1{
+    font-size: 40px;
+}
+
+.post-title {
+    font-size: 28px !important;
+}
+
+.post-subtitle {
+    font-size: 22px;
+}
