--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -11,6 +11,7 @@
             <div class="col-md-10 col-lg-8 col-xl-7">
                 <div class="site-heading">
                     <h1>{{article.title}}</h1>
+                    <time>{{article.jpublish}}</time>
                 </div>
             </div>
         </div>
@@ -19,7 +20,7 @@
 
 <!-- Post Content-->
 <article class="mb-4">
-    <div class="container px-4 px-lg-5">
+    <div class="container px-4 px-lg-5 text-justify">
         <div class="row gx-4 gx-lg-5 justify-content-center">
             <div class="col-md-10 col-lg-8 col-xl-7">
                 {{article.description|linebreaks}}
