--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -44,9 +44,12 @@
             <!-- Pager-->
             <div class="mb-4 pager-botton">
                 {% if articles.has_previous %}
-                    <a class="btn btn-primary text-uppercase float-right" href="#!">پستهای جدید &rarr;</a>
+                    <a class="btn btn-primary text-uppercase float-right" href="{% url 'blog:home' articles.previous_page_number %}">پستهای جدید &rarr;</a>
                 {% endif %}
-                <a class="btn btn-primary text-uppercase float-left" href="#!">پستهای قدیمی &larr;</a>
+                {% if articles.has_next %}
+                <a class="btn btn-primary text-uppercase float-left" href="{% url 'blog:home' articles.next_page_number %}">پستهای قدیمی &larr;</a>
+                {% endif %}
+                
             </div>
         </div>
     </div>
