--- a/blog/static/blog/css/rtl.css
+++ b/blog/static/blog/css/rtl.css
@@ -38,3 +38,85 @@ header.masthead .site-heading h1{
 .post-subtitle {
     font-size: 22px;
 }
+
+
+.nav ul {
+    padding-right: 0;
+}
+
+.nav ul li {
+    border-bottom: none;
+    height: 86px;
+    line-height: 86px;
+    font-size: 14px;
+    display: inline-block;
+    /* float: left; */
+    margin: 0 auto;
+}
+
+.nav ul li a {
+    text-decoration: none;
+    color: #000000;
+    display: block;
+    transition: .3s background-color;
+    padding: 0 24px;
+}
+
+.nav ul li a:hover {
+    background-color: #5c89c7;
+    color: #FFFFFF;
+}
+
+.nav a {
+    border-bottom: none;
+}
+
+.nav li ul {
+    position: absolute;
+    display: none;
+    width: inherit;
+}
+
+.nav li:hover ul {
+    display: block;
+}
+
+.nav ul li ul li {
+    display: block;
+    float: none !important;
+    /* newly added */
+    height: auto;
+    /* newly added */
+    line-height: 34px;
+    /* newly added */
+}
+
+.nav ul li ul li ul {
+    position: absolute;
+    right: 100%;
+    top: 0;
+    display: none !important;
+}
+
+.nav ul>li>ul>li:hover>ul {
+    display: block !important;
+}
+
+.nav ul>li>ul>li>ul>li:hover>ul {
+    display: block !important;
+}
+
+aside {
+    width: 240px;
+    position: absolute;
+    left: -240px;
+    top: 0;
+}
+
+.popular_articles {
+    border: 1px solid #bfbfbf;
+    padding: 15px;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    box-shadow: -5px 5px #d5d5d5;
+}
