--- a/blog/templates/blog/category.html
+++ b/blog/templates/blog/category.html
@@ -22,7 +22,7 @@
         <div class="col-md-10 col-lg-8 col-xl-7">
             <h3 class="alert alert-primary text-center">دسته بندی: {{category.title}}</h3>
             <!-- Post preview-->
-            {% for article in category.articles.published %}
+            {% for article in articles %}
             <div class="post-preview">
                 <a href="{% url 'blog:detail' article.slug %}">
                     <h2 class="post-title">{{article.title}}</h2>
@@ -43,8 +43,16 @@
             <hr class="my-4" />
             {% endfor %}
             <!-- Pager-->
-            <div class="d-flex justify-content-end mb-4 pager-botton">
-                <a class="btn btn-primary text-uppercase" href="#!">پستهای قدیمی &larr;</a>
+            <div class="mb-4 pager-botton">
+                {% if articles.has_previous %}
+                <a class="btn btn-primary text-uppercase float-right"
+                    href="{% url 'blog:category' category.slug articles.previous_page_number %}">پستهای جدید &rarr;</a>
+                {% endif %}
+                {% if articles.has_next %}
+                <a class="btn btn-primary text-uppercase float-left" href="{% url 'blog:category' category.slug articles.next_page_number %}">پستهای
+                    قدیمی &larr;</a>
+                {% endif %}
+            
             </div>
         </div>
     </div>
