--- a/blog/templates/blog/category_list.html
+++ b/blog/templates/blog/category_list.html
@@ -22,7 +22,7 @@
         <div class="col-md-10 col-lg-8 col-xl-7">
             <h3 class="alert alert-primary text-center">دسته بندی: {{category.title}}</h3>
             <!-- Post preview-->
-            {% for article in articles %}
+            {% for article in object_list %}
             <div class="post-preview">
                 <a href="{% url 'blog:detail' article.slug %}">
                     <h2 class="post-title">{{article.title}}</h2>
@@ -43,17 +43,19 @@
             <hr class="my-4" />
             {% endfor %}
             <!-- Pager-->
+            {% if is_paginated %}
             <div class="mb-4 pager-botton">
-                {% if articles.has_previous %}
+                {% if page_obj.has_previous %}
                 <a class="btn btn-primary text-uppercase float-right"
-                    href="{% url 'blog:category' category.slug articles.previous_page_number %}">پستهای جدید &rarr;</a>
+                    href="{% url 'blog:category' category.slug page_obj.previous_page_number %}">پستهای جدید &rarr;</a>
                 {% endif %}
-                {% if articles.has_next %}
-                <a class="btn btn-primary text-uppercase float-left" href="{% url 'blog:category' category.slug articles.next_page_number %}">پستهای
+                {% if page_obj.has_next %}
+                <a class="btn btn-primary text-uppercase float-left" href="{% url 'blog:category' category.slug page_obj.next_page_number %}">پستهای
                     قدیمی &larr;</a>
                 {% endif %}
             
             </div>
+            {% endif %}
         </div>
     </div>
 </div>
