--- a/blog/templates/blog/article_list.html
+++ b/blog/templates/blog/article_list.html
@@ -21,7 +21,7 @@
     <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col-md-10 col-lg-8 col-xl-7">
             <!-- Post preview-->
-            {% for article in articles %}
+            {% for article in object_list %}
                 <div class="post-preview">
                     <a href="{% url 'blog:detail' article.slug %}">
                         <h2 class="post-title">{{article.title}}</h2>
@@ -42,15 +42,19 @@
                 <hr class="my-4" />
             {% endfor %}
             <!-- Pager-->
-            <div class="mb-4 pager-botton">
-                {% if articles.has_previous %}
-                    <a class="btn btn-primary text-uppercase float-right" href="{% url 'blog:home' articles.previous_page_number %}">پستهای جدید &rarr;</a>
-                {% endif %}
-                {% if articles.has_next %}
-                <a class="btn btn-primary text-uppercase float-left" href="{% url 'blog:home' articles.next_page_number %}">پستهای قدیمی &larr;</a>
-                {% endif %}
+            {% if is_paginated %}
+                <div class="mb-4 pager-botton">
+                    {% if page_obj.has_previous %}
+                    <a class="btn btn-primary text-uppercase float-right"
+                        href="{% url 'blog:home' page_obj.previous_page_number %}">پستهای جدید &rarr;</a>
+                    {% endif %}
+                    {% if page_obj.has_next %}
+                    <a class="btn btn-primary text-uppercase float-left" href="{% url 'blog:home' page_obj.next_page_number %}">پستهای
+                        قدیمی &larr;</a>
+                    {% endif %}
                 
-            </div>
+                </div>
+            {% endif %}
         </div>
     </div>
 </div>
