--- a/blog/templates/blog/article_list.html
+++ b/blog/templates/blog/article_list.html
@@ -1,61 +1,11 @@
-{% extends 'blog/base.html' %}
+{% extends 'blog/list.html' %}
 
-{% load static %}
+{% block header %}{% endblock %}
 
-{% block main %}
-<!-- Page Header-->
-<header class="masthead" style="background-image: url('{% static "blog/assets/img/home-bg.jpg" %}')">
-    <div class="container position-relative px-4 px-lg-5">
-        <div class="row gx-4 gx-lg-5 justify-content-center">
-            <div class="col-md-10 col-lg-8 col-xl-7">
-                <div class="site-heading">
-                    <h1>وبلاگ جنگو</h1>
-                </div>
-            </div>
-        </div>
-    </div>
-</header>
+{% block previous_page_url %}
+    {% url 'blog:home' page_obj.previous_page_number %}
+{% endblock %}
 
-<!-- Main Content-->
-<div class="container px-4 px-lg-5">
-    <div class="row gx-4 gx-lg-5 justify-content-center">
-        <div class="col-md-10 col-lg-8 col-xl-7">
-            <!-- Post preview-->
-            {% for article in object_list %}
-                <div class="post-preview">
-                    <a href="{% url 'blog:detail' article.slug %}">
-                        <h2 class="post-title">{{article.title}}</h2>
-                        <h3 class="post-subtitle">{{article.description|truncatewords:30}}</h3>
-                    </a>
-                    <p class="post-meta">
-                        نوشته شده توسط
-                        <a href="#!">هانی سیدی</a>
-                        {{article.jpublish}}
-                    </p>
-                    <div>
-                        {% for cat in article.category_publised.all %}
-                            <a href="{% url 'blog:category' cat.slug %}">#{{cat.title}}</a>
-                        {% endfor %}
-                    </div>
-                </div>
-                <!-- Divider-->
-                <hr class="my-4" />
-            {% endfor %}
-            <!-- Pager-->
-            {% if is_paginated %}
-                <div class="mb-4 pager-botton">
-                    {% if page_obj.has_previous %}
-                    <a class="btn btn-primary text-uppercase float-right"
-                        href="{% url 'blog:home' page_obj.previous_page_number %}">پستهای جدید &rarr;</a>
-                    {% endif %}
-                    {% if page_obj.has_next %}
-                    <a class="btn btn-primary text-uppercase float-left" href="{% url 'blog:home' page_obj.next_page_number %}">پستهای
-                        قدیمی &larr;</a>
-                    {% endif %}
-                
-                </div>
-            {% endif %}
-        </div>
-    </div>
-</div>
+{% block next_page_url %}
+    {% url 'blog:home' page_obj.next_page_number %}
 {% endblock %}
